--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 2.2
+  TargetRailsVersion: 3.2
   Exclude:
     - 'db/**/*'
     - 'config/**/*'
@@ -23,7 +24,7 @@ Style/SafeNavigation:
 Layout/IndentHeredoc:
   Enabled: false
 
-Layout/IndentFirstArgument:
+Layout/FirstParameterIndentation:
   EnforcedStyle: consistent
 
 Rails/DynamicFindBy:
@@ -48,7 +49,6 @@ Metrics/LineLength:
   Exclude:
     - app/views/**/*
     - spec/**/*
-    - 'app/views/**/*.jbuilder'
   Max: 120
 
 Metrics/BlockLength:
@@ -56,7 +56,6 @@ Metrics/BlockLength:
      - 'Rakefile'
      - '**/*.rake'
      - 'spec/**/*.rb'
-     - 'app/views/**/*.jbuilder'
 
 Lint/AmbiguousBlockAssociation:
   Exclude:
